--- a/casestudies/115/casestudy/www/layout/case_id_115_id_816.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_816.html
@@ -4,7 +4,7 @@
   <title>
    El Equipo Spotlight | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica
   </title>
-  <meta content="text/html; charset=cp1252" http-equiv="Content-Type"/>
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
   <style media="all" type="text/css">
    @import "css_global/book/book.css";
@@ -137,7 +137,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_813.html">
-          Boston Globe— una breve historia
+          Boston GlobeÂ— una breve historia
          </a>
         </li>
         <li class="leaf">
@@ -162,7 +162,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_818.html">
-          La “ciudad más católica”
+          La Â“ciudad más católicaÂ”
          </a>
         </li>
         <li class="leaf">
@@ -263,7 +263,7 @@ font-style:italic;
        </span>
        <div class="content">
         <p>
-         El Equipo Spotlight gozaba de una inusual autonomía y libertad dentro de las operaciones del diario. Típicamente, pasaba semanas y meses reporteando temas, que tendían a concentrarse en la corrupción gubernamental y el crimen organizado. “Es uno de los mejores trabajos en el periodismo,” señala Robinson. Unidades como estas eran prohibitivamente costosas; muchos diarios no podían mantener una. Las investigaciones de Spotlight ocupaban a cuatro de los mejores periodistas del
+         El Equipo Spotlight gozaba de una inusual autonomía y libertad dentro de las operaciones del diario. Típicamente, pasaba semanas y meses reporteando temas, que tendían a concentrarse en la corrupción gubernamental y el crimen organizado. Â“Es uno de los mejores trabajos en el periodismo,Â” señala Robinson. Unidades como estas eran prohibitivamente costosas; muchos diarios no podían mantener una. Las investigaciones de Spotlight ocupaban a cuatro de los mejores periodistas del
          <em>
           Globe
          </em>
@@ -278,7 +278,7 @@ font-style:italic;
          <em>
           Globe
          </em>
-         había trabajado como jefe del buró que cubría el Municipio, ensayista semanal y reportero nacional itinerante. El respeto que Rezendes tenía por Robinson y Bradlee era tal que inmediatamente aceptó integrarse al equipo. Algo grande iba a suceder, lo presentía. “Quiero decir, lo sentía en mis huesos,” dice.
+         había trabajado como jefe del buró que cubría el Municipio, ensayista semanal y reportero nacional itinerante. El respeto que Rezendes tenía por Robinson y Bradlee era tal que inmediatamente aceptó integrarse al equipo. Algo grande iba a suceder, lo presentía. Â“Quiero decir, lo sentía en mis huesos,Â” dice.
          <sup>
           <a href="case_id_115_id_816.html#_ftn1" name="_ftnref1" title="">
            [8]
@@ -290,7 +290,7 @@ font-style:italic;
          <em>
           Hurgando
          </em>
-         . Primero, el equipo quería saber si el escándalo iba más allá de un solo sacerdote. ¿Qué sabían – si sabían algo -  los líderes de la iglesia sobre Geoghan y otros sacerdotes abusivos? Dice Baron:
+         . Primero, el equipo quería saber si el escándalo iba más allá de un solo sacerdote. ¿Qué sabían Â– si sabían algo -  los líderes de la iglesia sobre Geoghan y otros sacerdotes abusivos? Dice Baron:
         </p>
         <blockquote>
          <p>
@@ -308,7 +308,7 @@ font-style:italic;
          </p>
         </blockquote>
         <p>
-         Los reporteros sabían que las altas autoridades de la arquidiócesis probablemente no hablarían con ellos. Pero otros tal vez sí. Si hubo abusos sexuales, entonces había víctimas, y si había víctimas, entonces posiblemente había abogados. El Equipo Spotlight trabajó en los teléfonos. “Los cuatro comenzamos a llamar a todo el mundo,” dice Robinson. “Todas las personas que conocíamos y que podían saber algo sobre el tema. Ya sabes, estábamos hurgando en la oscuridad”.
+         Los reporteros sabían que las altas autoridades de la arquidiócesis probablemente no hablarían con ellos. Pero otros tal vez sí. Si hubo abusos sexuales, entonces había víctimas, y si había víctimas, entonces posiblemente había abogados. El Equipo Spotlight trabajó en los teléfonos. Â“Los cuatro comenzamos a llamar a todo el mundo,Â” dice Robinson. Â“Todas las personas que conocíamos y que podían saber algo sobre el tema. Ya sabes, estábamos hurgando en la oscuridadÂ”.
         </p>
         <p>
          Dentro de alrededor de una semana, descubrieron que la iglesia había pagado secretamente a varias personas para evitar que presentaran demandas por abuso sexual en contra de sacerdotes. Estos arreglos servían los intereses de todas las partes: los abogados recibían dinero sin tener que ir a juicio, la arquidiócesis mantenía ocultos los crímenes y las víctimas permanecían en el anonimato. Todos en el Equipo Spotlight acordaron que la situación ameritaba una mayor investigación y el desafío de hacerlo, dice Pfeiffer, aumentó su atractivo. Ella señala:
