--- a/casestudies/115/casestudy/www/layout/case_id_115_id_826.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_826.html
@@ -4,7 +4,7 @@
   <title>
    Cuando la historia se torna personal | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica
   </title>
-  <meta content="text/html; charset=cp1252" http-equiv="Content-Type"/>
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
   <style media="all" type="text/css">
    @import "css_global/book/book.css";
@@ -137,7 +137,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_813.html">
-          Boston Globe— una breve historia
+          Boston GlobeÂ— una breve historia
          </a>
         </li>
         <li class="leaf">
@@ -162,7 +162,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_818.html">
-          La “ciudad más católica”
+          La Â“ciudad más católicaÂ”
          </a>
         </li>
         <li class="leaf">
@@ -267,13 +267,13 @@ font-style:italic;
          <em>
           off the record
          </em>
-         , y otras no querían hablar en absoluto. En un caso, cuenta Robinson, “la víctima no quería hablar con nosotros, pero su padre nos contó sobre un sacerdote que no sólo había abusado de niños, sino que también mató a un niño en un accidente de auto cuando manejaba ebrio.” Ese sacerdote era el padre Ronald Paquin.
+         , y otras no querían hablar en absoluto. En un caso, cuenta Robinson, Â“la víctima no quería hablar con nosotros, pero su padre nos contó sobre un sacerdote que no sólo había abusado de niños, sino que también mató a un niño en un accidente de auto cuando manejaba ebrio.Â” Ese sacerdote era el padre Ronald Paquin.
         </p>
         <p>
-         Paquin “le pertenecía” a Pfeiffer: los periodistas de Spotlight se habían repartido los sacerdotes. Pfeiffer, resultaba, estaba a cargo de entrevistar a las víctimas de los tres sacerdotes acusados más frecuentemente de abusos (aparte de Geoghan): Paul Shanley, Joseph Birmingham y Ronald Paquin. Como ex reportera de tribunales con años de experiencia en conversar con víctimas de crímenes, Pfeiffer tenía una reputación de oyente hábil y paciente. Tanto por teléfono como en persona, ella hacía que las víctimas – casi todos hombres - se sintieran cómodas para contar sus historias. Los crímenes habían sucedido hacía años, pero algunas víctimas estaban recién enfrentando su vergüenza y confusión. “Rompía el corazón pensar que hombres adultos todavía luchaban con lo que les había pasado,” dice Pfeiffer. Algunos nunca habían contado sus historias antes de conversar con Pfeiffer. “Da vergüenza contar ese tipo de historia a cualquiera, pero tal vez fue un poco menos vergonzoso contarle a una mujer,” dice Pfeiffer.
+         Paquin Â“le pertenecíaÂ” a Pfeiffer: los periodistas de Spotlight se habían repartido los sacerdotes. Pfeiffer, resultaba, estaba a cargo de entrevistar a las víctimas de los tres sacerdotes acusados más frecuentemente de abusos (aparte de Geoghan): Paul Shanley, Joseph Birmingham y Ronald Paquin. Como ex reportera de tribunales con años de experiencia en conversar con víctimas de crímenes, Pfeiffer tenía una reputación de oyente hábil y paciente. Tanto por teléfono como en persona, ella hacía que las víctimas Â– casi todos hombres - se sintieran cómodas para contar sus historias. Los crímenes habían sucedido hacía años, pero algunas víctimas estaban recién enfrentando su vergüenza y confusión. Â“Rompía el corazón pensar que hombres adultos todavía luchaban con lo que les había pasado,Â” dice Pfeiffer. Algunos nunca habían contado sus historias antes de conversar con Pfeiffer. Â“Da vergüenza contar ese tipo de historia a cualquiera, pero tal vez fue un poco menos vergonzoso contarle a una mujer,Â” dice Pfeiffer.
         </p>
         <p>
-         En los inicios de la investigación, Pfeiffer se reunió en un restaurante con una de las víctimas de Shanley, Arthur Austin, de 53 años. Shanley era un carismático “sacerdote de calle”, de pelo largo, quien en los sesenta y setenta predicaba a jóvenes marginados: quienes habían escapado de sus casas, luchaban con su identidad sexual, o drogadictos.  Abusó a muchos de ellos. Austin fue a verlo por primera vez en 1968. Durante los siguientes seis años, Austin se convirtió en el “esclavo sexual” de Shanley. Mientras le contaba a Pfeiffer sobre los años de abusos y su consecuentes depresiones, Austin se quebró. “La mesera no sabía cómo acercarse a la mesa porque él lloraba todo el tiempo,” dice Pfeiffer.
+         En los inicios de la investigación, Pfeiffer se reunió en un restaurante con una de las víctimas de Shanley, Arthur Austin, de 53 años. Shanley era un carismático Â“sacerdote de calleÂ”, de pelo largo, quien en los sesenta y setenta predicaba a jóvenes marginados: quienes habían escapado de sus casas, luchaban con su identidad sexual, o drogadictos.  Abusó a muchos de ellos. Austin fue a verlo por primera vez en 1968. Durante los siguientes seis años, Austin se convirtió en el Â“esclavo sexualÂ” de Shanley. Mientras le contaba a Pfeiffer sobre los años de abusos y su consecuentes depresiones, Austin se quebró. Â“La mesera no sabía cómo acercarse a la mesa porque él lloraba todo el tiempo,Â” dice Pfeiffer.
          <sup>
           <a href="case_id_115_id_826.html#_ftn1" name="_ftnref1" title="">
            [28]
@@ -285,7 +285,7 @@ font-style:italic;
         </p>
         <blockquote>
          <p>
-          Creo que muchas veces esa excentricidad venía del hecho de que habían contado su historia por tantos años y nadie les había creído… O, para ser honesto, que los abusos los habían desequilibrado un poco.
+          Creo que muchas veces esa excentricidad venía del hecho de que habían contado su historia por tantos años y nadie les había creídoÂ… O, para ser honesto, que los abusos los habían desequilibrado un poco.
          </p>
         </blockquote>
         <p>
@@ -297,7 +297,7 @@ font-style:italic;
          </p>
         </blockquote>
         <p>
-         Una vez, Rezendes pasó tres horas conversando con una pareja y sus tres hijos; dos de ellos – una niña y un niño – habían sido abusados por el padre Peter S. Kanchong, un sacerdote tailandés que había ido a trabajar a la Arquidiócesis de Boston. El hijo había intentado suicidarse. Los padres estaban devastados por la culpa. Era una cosa sospechar, como lo hacía Rezendes, de que el abuso sexual en la iglesia era “una epidemia”, por otra escuchar las historias. Rezendes dice:
+         Una vez, Rezendes pasó tres horas conversando con una pareja y sus tres hijos; dos de ellos Â– una niña y un niño Â– habían sido abusados por el padre Peter S. Kanchong, un sacerdote tailandés que había ido a trabajar a la Arquidiócesis de Boston. El hijo había intentado suicidarse. Los padres estaban devastados por la culpa. Era una cosa sospechar, como lo hacía Rezendes, de que el abuso sexual en la iglesia era Â“una epidemiaÂ”, por otra escuchar las historias. Rezendes dice:
         </p>
         <blockquote>
          <p>
@@ -320,7 +320,7 @@ font-style:italic;
             <a href="case_id_115_id_826.html#_ftnref1" name="_ftn1" title="">
              [28]
             </a>
-            Roy J. Harris Jr., Pulitzer’s Gold: Behind the Prize for Public Service Journalism. (University of Missouri Press, 2007), p. 52.
+            Roy J. Harris Jr., PulitzerÂ’s Gold: Behind the Prize for Public Service Journalism. (University of Missouri Press, 2007), p. 52.
            </span>
           </p>
          </div>
