--- a/casestudies/115/casestudy/www/layout/case_id_115_id_828.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_828.html
@@ -4,7 +4,7 @@
   <title>
    Potencial reacción | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica
   </title>
-  <meta content="text/html; charset=cp1252" http-equiv="Content-Type"/>
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
   <style media="all" type="text/css">
    @import "css_global/book/book.css";
@@ -137,7 +137,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_813.html">
-          Boston Globe— una breve historia
+          Boston GlobeÂ— una breve historia
          </a>
         </li>
         <li class="leaf">
@@ -162,7 +162,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_818.html">
-          La “ciudad más católica”
+          La Â“ciudad más católicaÂ”
          </a>
         </li>
         <li class="leaf">
@@ -279,7 +279,7 @@ font-style:italic;
          </p>
         </blockquote>
         <p>
-         Aunque Baron no tenía una relación muy íntima con las comunidades católicas, estaba muy conciente del carácter explosivo de la noticia. Sabía, en primer lugar, que su propia religión podría convertirse en un tema: los críticos podrían señalar que había llegado un “editor judío” para inmediatamente lanzar una investigación sobre la iglesia. Baron agrega:
+         Aunque Baron no tenía una relación muy íntima con las comunidades católicas, estaba muy conciente del carácter explosivo de la noticia. Sabía, en primer lugar, que su propia religión podría convertirse en un tema: los críticos podrían señalar que había llegado un Â“editor judíoÂ” para inmediatamente lanzar una investigación sobre la iglesia. Baron agrega:
         </p>
         <blockquote>
          <p>
@@ -295,10 +295,10 @@ font-style:italic;
          </p>
         </blockquote>
         <p>
-         El diario también estaba consciente del potencial impacto económico que la publicación de una noticia impactante pudiera tener, en una época de decreciente circulación e ingresos. Eso no significaba que suspenderían la publicación, pero Baron y sus colegas debían ser realistas. “Cuando [los diarios] están perdiendo lectores, hay una sensibilidad mayor hacia la posibilidad de molestar a una buena parte de la comunidad y hacer que cancelen sus suscripciones,” explica Baron.
+         El diario también estaba consciente del potencial impacto económico que la publicación de una noticia impactante pudiera tener, en una época de decreciente circulación e ingresos. Eso no significaba que suspenderían la publicación, pero Baron y sus colegas debían ser realistas. Â“Cuando [los diarios] están perdiendo lectores, hay una sensibilidad mayor hacia la posibilidad de molestar a una buena parte de la comunidad y hacer que cancelen sus suscripciones,Â” explica Baron.
         </p>
         <p>
-         Bradlee afirma que había una “comprensión no verbalizada” entre los periodistas de que los riesgos eran inusualmente altos: estaban, a fin de cuentas, produciendo una historia que incriminaba a la institución más poderosa de la ciudad, una fuente de orgullo y consuelo para millones. Aunque los periodistas de Spotlight no podían prevenir una reacción hostil, podían tratar de minimizarla. Podrían reportear la historia de manera exhaustiva, utilizando documentación y fuentes identificadas donde fuera posible. Resolvieron hacer esfuerzos especiales por redactar de manera desapasionada y evitar utilizar lenguaje cargado y exageraciones, para que los críticos no encontraran ningún gancho en que colgarse para acusarlos de parcialidad. “Teníamos que hacer esta historia a prueba de balas,” dice Pfeiffer.
+         Bradlee afirma que había una Â“comprensión no verbalizadaÂ” entre los periodistas de que los riesgos eran inusualmente altos: estaban, a fin de cuentas, produciendo una historia que incriminaba a la institución más poderosa de la ciudad, una fuente de orgullo y consuelo para millones. Aunque los periodistas de Spotlight no podían prevenir una reacción hostil, podían tratar de minimizarla. Podrían reportear la historia de manera exhaustiva, utilizando documentación y fuentes identificadas donde fuera posible. Resolvieron hacer esfuerzos especiales por redactar de manera desapasionada y evitar utilizar lenguaje cargado y exageraciones, para que los críticos no encontraran ningún gancho en que colgarse para acusarlos de parcialidad. Â“Teníamos que hacer esta historia a prueba de balas,Â” dice Pfeiffer.
         </p>
        </div>
        <div class="book-navigation" style="clear:both">
