--- a/casestudies/50/casestudy/www/layout/case_id_50_id_506.html
+++ b/casestudies/50/casestudy/www/layout/case_id_50_id_506.html
@@ -3,7 +3,7 @@
 <head>
   <title>Schaefer y las autoridades chilenas | &iquest;Periodistas o polic&iacute;as? CONTACTO y la b&uacute;squeda de Paul Schaefer
   </title>
- <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+ <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 <style type="text/css" media="all">@import "css_global/book/book.css";</style>
 <style type="text/css" media="all">@import "css_global/node/node.css";</style>
@@ -241,7 +241,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_50_id_517.html">¿Polic&iacute;as y ladrones?</a>
+<li class="leaf"><a  href="case_id_50_id_517.html">Â¿Polic&iacute;as y ladrones?</a>
 
 
 
