--- a/casestudies/50/casestudy/www/layout/case_id_50_id_516.html
+++ b/casestudies/50/casestudy/www/layout/case_id_50_id_516.html
@@ -6,7 +6,7 @@
   <title>Encubierto en Chivilcoy | &iquest;Periodistas o polic&iacute;as? CONTACTO y la b&uacute;squeda de Paul Schaefer
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -246,7 +246,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_50_id_517.html">¿Polic&iacute;as y ladrones?</a>
+<li class="leaf"><a  href="case_id_50_id_517.html">Â¿Polic&iacute;as y ladrones?</a>
 
 
 
@@ -343,7 +343,7 @@ font-style:italic;
 
 <a href="case_id_50_id_515.html" class="page-previous" title="Go to previous page">&#171;&#160;El dilema de la c&aacute;mara oculta</a>
 
-<a href="case_id_50_id_517.html" class="page-next" title="Go to next page">¿Polic&iacute;as y ladrones?&#160;&#187;</a>
+<a href="case_id_50_id_517.html" class="page-next" title="Go to next page">Â¿Polic&iacute;as y ladrones?&#160;&#187;</a>
 
 </div>
 </div></div>
