--- a/casestudies/50/casestudy/www/layout/case_id_50_id_517.html
+++ b/casestudies/50/casestudy/www/layout/case_id_50_id_517.html
@@ -3,10 +3,10 @@
 
 
 <head>
-  <title>¿Polic&iacute;as y ladrones? | &iquest;Periodistas o polic&iacute;as? CONTACTO y la b&uacute;squeda de Paul Schaefer
+  <title>Â¿Polic&iacute;as y ladrones? | &iquest;Periodistas o polic&iacute;as? CONTACTO y la b&uacute;squeda de Paul Schaefer
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -90,7 +90,7 @@ font-style:italic;
 <table border="0" cellspacing="0" cellpadding="0">
 	<tr>
 		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_50.html" title="Home"><span>¿Polic&iacute;as y ladrones?</span></a></h1>						</td>
+		<h1 class='site-name'><a href="case_id_50.html" title="Home"><span>Â¿Polic&iacute;as y ladrones?</span></a></h1>						</td>
 		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
 	</tr>
 
@@ -246,7 +246,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  class="active"  href="case_id_50_id_517.html">¿Polic&iacute;as y ladrones?</a>
+<li class="leaf"><a  class="active"  href="case_id_50_id_517.html">Â¿Polic&iacute;as y ladrones?</a>
 
 
 
@@ -322,7 +322,7 @@ font-style:italic;
 		
 		
 		</div>		
-		<h1 class="title">¿Polic&iacute;as y ladrones?</h1>
+		<h1 class="title">Â¿Polic&iacute;as y ladrones?</h1>
 		
 		
 		
