--- a/casestudies/50/casestudy/www/layout/case_id_50_id_521.html
+++ b/casestudies/50/casestudy/www/layout/case_id_50_id_521.html
@@ -8,7 +8,7 @@
   <title>&iquest;Sin Alternativas? | &iquest;Periodistas o polic&iacute;as? CONTACTO y la b&uacute;squeda de Paul Schaefer
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -122,7 +122,7 @@ font-style:italic;
 <li class="leaf"><a  href="case_id_50_id_514.html">El Segundo Viaje&#8212;a Desenmascarar</a></li>
 <li class="leaf"><a  href="case_id_50_id_515.html">El dilema de la c&aacute;mara oculta</a></li>
 <li class="leaf"><a  href="case_id_50_id_516.html">Encubierto en Chivilcoy</a></li>
-<li class="leaf"><a  href="case_id_50_id_517.html">¿Polic&iacute;as y ladrones?</a></li>
+<li class="leaf"><a  href="case_id_50_id_517.html">Â¿Polic&iacute;as y ladrones?</a></li>
 <li class="leaf"><a  href="case_id_50_id_518.html">Dudas en Santiago</a></li>
 <li class="leaf"><a  href="case_id_50_id_519.html">La Solita</a></li>
 <li class="leaf"><a  href="case_id_50_id_520.html">Un avance</a></li>
