--- a/casestudies/62/casestudy/www/layout/case_id_62.html
+++ b/casestudies/62/casestudy/www/layout/case_id_62.html
@@ -5,10 +5,11 @@
 
 
 <head>
-  <title>Una Historia Esquiva: El Chicago Tribune y la ley “Que Ningún Niño Quede Atrás” | Una Historia Esquiva: El Chicago Tribune y la ley &quot;Que Ning&uacute;n Ni&ntilde;o Quede Atr&aacute;s&quot;
+  <title>Una Historia Esquiva: El Chicago Tribune y la ley "Que NingÃºn NiÃ±o Quede AtrÃ¡s" | Una Historia Esquiva: El Chicago Tribune y la ley &quot;Que Ning&uacute;n Ni&ntilde;o Quede Atr&aacute;s&quot;
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta charset="utf-8"/>
+<!--meta http-equiv="Content-Type" content="text/html; charset=windows-1252"-->
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -92,7 +93,7 @@ font-style:italic;
 <table border="0" cellspacing="0" cellpadding="0">
 	<tr>
 		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_62.html" title="Home"><span>Una Historia Esquiva: El Chicago Tribune y la ley “Que Ningún Niño Quede Atrás”</span></a></h1>						</td>
+		<h1 class='site-name'><a href="case_id_62.html" title="Home"><span>Una Historia Esquiva: El Chicago Tribune y la ley "Que NingÃºn NiÃ±o Quede AtrÃ¡s"</span></a></h1>						</td>
 		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
 	</tr>
 
@@ -157,12 +158,11 @@ font-style:italic;
 				
 		<div id="main">
 		<div class="breadcrumb"><a href="case_id_62.html">Home</a> 
-		
-		
+				
 		
 		
 		</div>		
-		<h1 class="title">Una Historia Esquiva: El <i>Chicago Tribune</i> y la ley “Que Ningún Niño Quede Atrás”</h1>
+		<h1 class="title">Una Historia Esquiva: El <i>Chicago Tribune</i> y la ley "Que NingÃºn NiÃ±o Quede AtrÃ¡s"</h1>
 		
 		
 		
@@ -185,7 +185,7 @@ font-style:italic;
 	<em>Este case fue escrito por Julia Ioffe para la Iniciativa de Estudios &ldquo;Knight Case&rdquo; a Escuela de Graduados de Periodismo de la Universidad de Columbia. </em><em>La Universidad de los Andes traducida de la versi&oacute;n en espa&ntilde;ol. </em><em>El patrocinador de la facultad fue el profesor </em><em>LynNell Hancock</em><em>. El financiamiento fue proporcionado por la Fundaci&oacute;n John S. y James L. Knight Foundation.</em></p>
 
 <div>
-	<strong>Para más información:</strong></div>
+	<strong>Para mÃ¡s informaciÃ³n:</strong></div>
 <div>
 	E-mail: <a href="mailto:ccnmtl+casestudies@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@columbia.edu</a></div>
 <div>
