--- a/casestudies/109/casestudy/www/layout/case_id_109_id_747.html
+++ b/casestudies/109/casestudy/www/layout/case_id_109_id_747.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>¿Cuándo un  trato ya no es un trato? | ¿Amigo o enemigo? Wikileaks y the Guardian 
+  <title>Â¿CuÃ¡ndo un  trato ya no es un trato? | Â¿Amigo o enemigo? Wikileaks y the Guardian 
 	- A Journalism Case Study
   </title>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 <style type="text/css" media="all">@import "css_global/book/book.css";</style>
 <style type="text/css" media="all">@import "css_global/node/node.css";</style>
@@ -78,7 +78,7 @@ font-style:italic;
 <table border="0" cellspacing="0" cellpadding="0">
 	<tr>
 		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_109.html" title="Home"><span>¿Cuándo un  trato ya no es un trato?</span></a></h1>						</td>
+		<h1 class='site-name'><a href="case_id_109.html" title="Home"><span>Â¿CuÃ¡ndo un  trato ya no es un trato?</span></a></h1>						</td>
 		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
 	</tr>
 
@@ -117,7 +117,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_109_id_741.html">Introducción</a>
+<li class="leaf"><a  href="case_id_109_id_741.html">IntroducciÃ³n</a>
 
 
 
@@ -171,7 +171,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  class="active"  href="case_id_109_id_747.html">¿Cuándo un  trato ya no es un trato?</a>
+<li class="leaf"><a  class="active"  href="case_id_109_id_747.html">Â¿CuÃ¡ndo un  trato ya no es un trato?</a>
 
 
 
@@ -207,7 +207,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_109_id_751.html">Precaución y preocupación</a>
+<li class="leaf"><a  href="case_id_109_id_751.html">PrecauciÃ³n y preocupaciÃ³n</a>
 
 
 
@@ -247,7 +247,7 @@ font-style:italic;
 		
 		
 		</div>		
-		<h1 class="title">¿Cuándo un  trato ya no es un trato?</h1>
+		<h1 class="title">Â¿CuÃ¡ndo un  trato ya no es un trato?</h1>
 		
 		
 		
