--- a/casestudies/109/casestudy/www/layout/case_id_109_id_748.html
+++ b/casestudies/109/casestudy/www/layout/case_id_109_id_748.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>La tormenta del 1 de Noviembre | ¿Amigo o enemigo? Wikileaks y the Guardian 
+  <title>La tormenta del 1 de Noviembre | Â¿Amigo o enemigo? Wikileaks y the Guardian 
 	- A Journalism Case Study
   </title>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 <style type="text/css" media="all">@import "css_global/book/book.css";</style>
 <style type="text/css" media="all">@import "css_global/node/node.css";</style>
@@ -117,7 +117,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_109_id_741.html">Introducción</a>
+<li class="leaf"><a  href="case_id_109_id_741.html">IntroducciÃ³n</a>
 
 
 
@@ -171,7 +171,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_109_id_747.html">¿Cuándo un  trato ya no es un trato?</a>
+<li class="leaf"><a  href="case_id_109_id_747.html">Â¿CuÃ¡ndo un  trato ya no es un trato?</a>
 
 
 
@@ -207,7 +207,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_109_id_751.html">Precaución y preocupación</a>
+<li class="leaf"><a  href="case_id_109_id_751.html">PrecauciÃ³n y preocupaciÃ³n</a>
 
 
 
@@ -313,7 +313,7 @@ font-style:italic;
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
 
 
-<a href="case_id_109_id_747.html" class="page-previous" title="Go to previous page">&#171;&#160;¿Cuándo un  trato ya no es un trato?</a>
+<a href="case_id_109_id_747.html" class="page-previous" title="Go to previous page">&#171;&#160;Â¿CuÃ¡ndo un  trato ya no es un trato?</a>
 
 <a href="case_id_109_id_749.html" class="page-next" title="Go to next page">Redacciones y reportajes&#160;&#187;</a>
 
