--- a/casestudies/115/casestudy/www/layout/case_id_115_id_824.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_824.html
@@ -4,7 +4,7 @@
   <title>
    Organizar los archivos | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica
   </title>
-  <meta content="text/html; charset=cp1252" http-equiv="Content-Type"/>
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
   <style media="all" type="text/css">
    @import "css_global/book/book.css";
@@ -137,7 +137,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_813.html">
-          Boston Globe— una breve historia
+          Boston GlobeÂ— una breve historia
          </a>
         </li>
         <li class="leaf">
@@ -162,7 +162,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_818.html">
-          La “ciudad más católica”
+          La Â“ciudad más católicaÂ”
          </a>
         </li>
         <li class="leaf">
@@ -263,7 +263,7 @@ font-style:italic;
        </span>
        <div class="content">
         <p>
-         En la medida en que se reunía cada vez más información, el Equipo Spotlight sabía que organizarla sería algo esencial. Matt Carroll era, cómo él mismo se describe, “el custodio de los datos”. Había comenzado a trabajar en el
+         En la medida en que se reunía cada vez más información, el Equipo Spotlight sabía que organizarla sería algo esencial. Matt Carroll era, cómo él mismo se describe, Â“el custodio de los datosÂ”. Había comenzado a trabajar en el
          <em>
           Globe
          </em>
@@ -273,7 +273,7 @@ font-style:italic;
          <em>
           Licencia médica
          </em>
-         . La base de datos se agrandó luego de que a Robinson “se le iluminara la ampolleta”. Se le ocurrió buscar en los directorios publicados por la iglesia, que incluían el estatus y ubicación de todos los sacerdotes en la arquidiócesis. El Equipo Spotlight sabía que entre cada traslado, Geoghan había estado con “licencia médica”, así que comenzaron a examinar 17 años de directorios, prestando especial atención a las destinaciones cuando eran retirados de circulación (no destinados a una parroquia, por ejemplo). Carroll recuerda:
+         . La base de datos se agrandó luego de que a Robinson Â“se le iluminara la ampolletaÂ”. Se le ocurrió buscar en los directorios publicados por la iglesia, que incluían el estatus y ubicación de todos los sacerdotes en la arquidiócesis. El Equipo Spotlight sabía que entre cada traslado, Geoghan había estado con Â“licencia médicaÂ”, así que comenzaron a examinar 17 años de directorios, prestando especial atención a las destinaciones cuando eran retirados de circulación (no destinados a una parroquia, por ejemplo). Carroll recuerda:
         </p>
         <blockquote>
          <p>
@@ -292,11 +292,11 @@ font-style:italic;
          Había razones legítimas para tomar una licencia médica, por supuesto, pero un periodo sin destinación era suficiente para despertar las sospechas del Equipo Spotlight, especialmente si el nombre de ese sacerdote había surgido en otra parte de la investigación. Aunque los directorios en sí no probaban nada, ofrecían valiosas pistas y un punto de referencia. Aquí, oculto a plena vista, había evidencia.
         </p>
         <p>
-         Los directorios eran como gruesas guías telefónicas con textos minúsculos. Pfeiffer, Rezendes y Carroll compartieron el tedioso trabajo de revisarlos. Dos de ellos revisaban los directorios y anunciaban en voz alta la información; el tercero ingresaba esos datos a una planilla. Esta era sólo una de las arduas tareas de la investigación. El Equipo Spotlight había sido conocido como un trabajo cómodo, con pocas y distantes fechas de entrega. Ya no. Trabajaron largas jornadas enclaustrados en “la cueva”, dos pequeñas salas en la planta baja del edificio del
+         Los directorios eran como gruesas guías telefónicas con textos minúsculos. Pfeiffer, Rezendes y Carroll compartieron el tedioso trabajo de revisarlos. Dos de ellos revisaban los directorios y anunciaban en voz alta la información; el tercero ingresaba esos datos a una planilla. Esta era sólo una de las arduas tareas de la investigación. El Equipo Spotlight había sido conocido como un trabajo cómodo, con pocas y distantes fechas de entrega. Ya no. Trabajaron largas jornadas enclaustrados en Â“la cuevaÂ”, dos pequeñas salas en la planta baja del edificio del
          <em>
           Globe
          </em>
-         . Cuando tenían un inusual día libre, ya no les quedaban muchas energías para las familias. “Estaba molido,” dice Carroll, que tenía cuatro pequeños hijos.
+         . Cuando tenían un inusual día libre, ya no les quedaban muchas energías para las familias. Â“Estaba molido,Â” dice Carroll, que tenía cuatro pequeños hijos.
         </p>
         <p>
          Como responsable del equipo, Walter Robinson podría haber dejado parte del trabajo pesado a los otros, pero era siempre el primero en llegar a la oficina en la mañana, al amanecer. Conocido cariñosamente como Robbie, era erudito pero hosco, alguien a quien se le podría imaginar hablando con estibadores como con jefes de Estado. Infatigable y meticuloso, impresionaba a sus colegas menos experimentados, que tenían poca alternativa que seguirle el ritmo. Robinson también era un reportero a la antigua. El 7 de septiembre, se reunió en el centro de la ciudad con dos fuentes que le entregaron una lista de sacerdotes cuyos presuntos abusos habían gatillado los acuerdos extrajudiciales de dinero. Había más de 30 nombres en esa lista.
@@ -309,7 +309,7 @@ font-style:italic;
          <em>
           Globe
          </em>
-         tenía un interés particular, ya que los dos vuelos que impactaron las Torres Gemelas de Nueva York habían partido desde Boston. El Equipo Spotlight fue sacado de la investigación sobre los abusos sexuales de sacerdotes. “Era obvio,” dice Robinson.
+         tenía un interés particular, ya que los dos vuelos que impactaron las Torres Gemelas de Nueva York habían partido desde Boston. El Equipo Spotlight fue sacado de la investigación sobre los abusos sexuales de sacerdotes. Â“Era obvio,Â” dice Robinson.
         </p>
        </div>
        <div class="book-navigation" style="clear:both">
