--- a/casestudies/115/casestudy/www/layout/case_id_115_id_830.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_830.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>¿Publicar o hacer una pausa? | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica
+  <title>Â¿Publicar o hacer una pausa? | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia CatÃ³lica
   </title>
- <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+ <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 <style type="text/css" media="all">@import "css_global/book/book.css";</style>
 <style type="text/css" media="all">@import "css_global/node/node.css";</style>
@@ -77,7 +77,7 @@ font-style:italic;
 <table border="0" cellspacing="0" cellpadding="0">
 	<tr>
 		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_115.html" title="Home"><span>¿Publicar o hacer una pausa?</span></a></h1>						</td>
+		<h1 class='site-name'><a href="case_id_115.html" title="Home"><span>Â¿Publicar o hacer una pausa?</span></a></h1>						</td>
 		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
 	</tr>
 
@@ -116,7 +116,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_115_id_812.html">Introducción</a>
+<li class="leaf"><a  href="case_id_115_id_812.html">IntroducciÃ³n</a>
 
 
 
@@ -125,7 +125,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_115_id_813.html">Boston Globe— una breve historia</a>
+<li class="leaf"><a  href="case_id_115_id_813.html">Boston Globeâ€” una breve historia</a>
 
 
 
@@ -143,7 +143,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_115_id_815.html">Nace una investigación</a>
+<li class="leaf"><a  href="case_id_115_id_815.html">Nace una investigaciÃ³n</a>
 
 
 
@@ -170,7 +170,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_115_id_818.html">La “ciudad más católica”</a>
+<li class="leaf"><a  href="case_id_115_id_818.html">La â€œciudad mÃ¡s catÃ³licaâ€</a>
 
 
 
@@ -197,7 +197,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_115_id_821.html">El Globe y los católicos de Boston</a>
+<li class="leaf"><a  href="case_id_115_id_821.html">El Globe y los catÃ³licos de Boston</a>
 
 
 
@@ -260,7 +260,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_115_id_828.html">Potencial reacción</a>
+<li class="leaf"><a  href="case_id_115_id_828.html">Potencial reacciÃ³n</a>
 
 
 
@@ -278,7 +278,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  class="active"  href="case_id_115_id_830.html">¿Publicar o hacer una pausa?</a>
+<li class="leaf"><a  class="active"  href="case_id_115_id_830.html">Â¿Publicar o hacer una pausa?</a>
 
 
 
@@ -298,7 +298,7 @@ font-style:italic;
     <div class="content"><div class="content">
 <ul class="menu">
 <li class="printpdf">
-<a href="../../files/global/115/Boston&#32;Globe&#32;y&#32;los&#32;Abusos&#32;Sexuales&#32;&#32;en&#32;la&#32;Iglesia&#32;Católica_wm&#32;.pdf" target="_blank">Download this case as a PDF</a></li>
+<a href="../../files/global/115/Boston&#32;Globe&#32;y&#32;los&#32;Abusos&#32;Sexuales&#32;&#32;en&#32;la&#32;Iglesia&#32;CatÃ³lica_wm&#32;.pdf" target="_blank">Download this case as a PDF</a></li>
 </ul>
 </div>
 </div>
@@ -318,7 +318,7 @@ font-style:italic;
 		
 		
 		</div>		
-		<h1 class="title">¿Publicar o hacer una pausa?</h1>
+		<h1 class="title">Â¿Publicar o hacer una pausa?</h1>
 		
 		
 		
