--- a/casestudies/50/casestudy/www/layout/case_id_50_id_507.html
+++ b/casestudies/50/casestudy/www/layout/case_id_50_id_507.html
@@ -4,7 +4,7 @@
   <title>CONTACTO | &iquest;Periodistas o polic&iacute;as? CONTACTO y la b&uacute;squeda de Paul Schaefer
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -244,7 +244,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_50_id_517.html">¿Polic&iacute;as y ladrones?</a>
+<li class="leaf"><a  href="case_id_50_id_517.html">Â¿Polic&iacute;as y ladrones?</a>
 
 
 
