--- a/casestudies/50/casestudy/www/layout/case_id_50_id_515.html
+++ b/casestudies/50/casestudy/www/layout/case_id_50_id_515.html
@@ -6,7 +6,7 @@
   <title>El dilema de la c&aacute;mara oculta | &iquest;Periodistas o polic&iacute;as? CONTACTO y la b&uacute;squeda de Paul Schaefer
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -246,7 +246,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_50_id_517.html">¿Polic&iacute;as y ladrones?</a>
+<li class="leaf"><a  href="case_id_50_id_517.html">Â¿Polic&iacute;as y ladrones?</a>
 
 
 
@@ -334,7 +334,7 @@ font-style:italic;
     <div class="content"><p><span>Mientras tanto, Villarrubia ten&iacute;a otro problema. Eventualmente, su investigaci&oacute;n se convertir&iacute;a en un documental y para ello necesitar&iacute;a im&aacute;genes convincentes. Pero ni los aldeanos en Chivilcoy, ni los alemanes viviendo en &ldquo;La Solita&rdquo; era probable que accedieran a ser filmados. Por lo que el equipo editorial de CONTACTO decidi&oacute; que tanto el camar&oacute;grafo y Villarrubia llevar&iacute;an ocultas. </span></p>
 <p><span>El uso de c&aacute;maras ocultas fue una t&aacute;ctica com&uacute;n en las investigaciones de CONTACTO y fue ampliamente utilizado en el periodismo chileno en general. T&eacute;cnicamente la legislaci&oacute;n chilena proh&iacute;be la captura de im&aacute;genes y conversaciones privadas. Sin embargo, los tribunales est&aacute;n generalmente a favor del periodista, si el informe resulta en beneficio del p&uacute;blico. El punto, argumentan los defensores, fue la captura de im&aacute;genes que podr&iacute;a ser de alguna otra forma, indemostrable. En CONTACTO, su uso est&aacute; sujeto a la discrecionalidad del editor responsable. </span></p>
 <embed width="420" height="245" type="application/x-shockwave-flash" src="player.swf" style="" id="player" name="player" quality="high" allowfullscreen="true" allowscriptaccess="always" flashvars="file=../../files/videos/205/076_077_1_cardemil_on_hidden_camera.flv&amp;autostart=false"></embed>
-<p><span class="caption2">Bazán Cardemil</span></p>
+<p><span class="caption2">BazÃ¡n Cardemil</span></p>
 <p><span>Sin duda, existieron problemas. &iquest;Qu&eacute; pasar&iacute;a si un periodista con una c&aacute;mara oculta fuera descubierto por las autoridades o, peor a&uacute;n, por alguien armado y peligroso? &iquest;C&oacute;mo podr&iacute;a un periodista saber de antemano si su historia ser&iacute;a de vital importancia para el p&uacute;blico? Rodr&iacute;guez reconoci&oacute; que las l&iacute;neas eran un tanto confusas y subjetivas.</span></p>
 <embed width="420" height="245" type="application/x-shockwave-flash" src="player.swf" style="" id="player" name="player" quality="high" allowfullscreen="true" allowscriptaccess="always" flashvars="file=../../files/videos/206/079_080_1_rodriguez_hidden_camera_permanent_dilemma.flv&amp;autostart=false"></embed>
 <p><span class="caption2">Rodr&iacute;guez</span></p></div>
