--- a/casestudies/50/casestudy/www/layout/case_id_50_id_518.html
+++ b/casestudies/50/casestudy/www/layout/case_id_50_id_518.html
@@ -6,7 +6,7 @@
   <title>Dudas en Santiago | &iquest;Periodistas o polic&iacute;as? CONTACTO y la b&uacute;squeda de Paul Schaefer
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -246,7 +246,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_50_id_517.html">¿Polic&iacute;as y ladrones?</a>
+<li class="leaf"><a  href="case_id_50_id_517.html">Â¿Polic&iacute;as y ladrones?</a>
 
 
 
@@ -345,7 +345,7 @@ font-style:italic;
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
 
 
-<a href="case_id_50_id_517.html" class="page-previous" title="Go to previous page">&#171;&#160;¿Polic&iacute;as y ladrones?</a>
+<a href="case_id_50_id_517.html" class="page-previous" title="Go to previous page">&#171;&#160;Â¿Polic&iacute;as y ladrones?</a>
 
 <a href="case_id_50_id_519.html" class="page-next" title="Go to next page">La Solita&#160;&#187;</a>
 
