--- a/casestudies/50/casestudy/www/layout/case_id_50_id_520.html
+++ b/casestudies/50/casestudy/www/layout/case_id_50_id_520.html
@@ -6,7 +6,7 @@
   <title>Un avance | &iquest;Periodistas o polic&iacute;as? CONTACTO y la b&uacute;squeda de Paul Schaefer
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -138,7 +138,7 @@ font-style:italic;
 </li>
 <li class="leaf"><a  href="case_id_50_id_516.html">Encubierto en Chivilcoy</a>
 </li>
-<li class="leaf"><a  href="case_id_50_id_517.html">¿Polic&iacute;as y ladrones?</a>
+<li class="leaf"><a  href="case_id_50_id_517.html">Â¿Polic&iacute;as y ladrones?</a>
 </li>
 <li class="leaf"><a  href="case_id_50_id_518.html">Dudas en Santiago</a>
 </li>
